--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+.web-server-pid
+###< symfony/web-server-bundle ###
