--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,6 @@ services:
 
     # controllers are imported separately to make sure they
     # have the tag that allows actions to type-hint services
-    App\Controller\:
+    App\Framework\Controller\:
         resource: '../src/Framework/Controller'
         tags: ['controller.service_arguments']
